# A.N.A-Automated-neural-adapter

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
ana/: __init__.py  __main__.py  train.py
