[project]
name = "automated_neural_adapter_ANA"
version = "7.6.1"
description = "Automated Neural Adapter (ANA)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",          
    "transformers",
    "datasets",
    "peft",
    "accelerate",
    "bitsandbytes"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
